--- a/TalentAnalyticsSite/App/header/styles/top.header.less
+++ b/TalentAnalyticsSite/App/header/styles/top.header.less
@@ -361,7 +361,12 @@ header {
 }
 #wrapper {
     min-height:0px !important;
+    width: 95%;
+    max-width: 1200px;
+    min-width: 980px;
+    margin: 0 auto;
 }
+
 .dra-cancel-button {
 margin-right:0px !important;
 }
