--- a/TalentAnalyticsSite/App/core/styles/empqvcommon.css
+++ b/TalentAnalyticsSite/App/core/styles/empqvcommon.css
@@ -529,6 +529,29 @@ a:focus {
   text-decoration: none;
   font-family: OpenSansReg;
 }
+.container-bg {
+  clear: both;
+  padding-top: 5px;
+  background-color: #f0f1f3;
+}
+.empfromback {
+  margin-top: 10px;
+  background: #fff;
+}
+.li_style {
+  list-style-type: none;
+  padding: 5px 0;
+  font-weight: bold;
+}
+.savebutton {
+  margin-bottom: 15px;
+  text-align: right;
+}
+input[type=radio] {
+  margin: 4px 7px 0;
+  width: 15px;
+  height: 15px;
+}
 /* Safari Conditional CSS  */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   /* Safari and Chrome, if Chrome rule needed */
@@ -638,3 +661,4 @@ div.visandAnalytics.selected {
     font-size: 12px !important;
   }
 }
+/*# sourceMappingURL=empqvcommon.css.map */
