--- a/TalentAnalyticsSite/App/core/styles/empqvcommon.less
+++ b/TalentAnalyticsSite/App/core/styles/empqvcommon.less
@@ -502,12 +502,36 @@ input[type=text]::-ms-clear {
 /*headcountcommon styles*/
 section {
     text-align: left;
+
 }
 a, a:visited, a:focus {
     text-decoration: none;
     font-family: OpenSansReg;
 }
 
+.container-bg{
+    clear: both;
+    padding-top:5px;
+    background-color: #f0f1f3;
+}
+.empfromback{
+    margin-top:10px;
+    background: #fff;
+}
+.li_style {
+list-style-type: none;
+padding: 5px 0;
+font-weight: bold;
+}
+.savebutton{
+    margin-bottom: 15px;
+    text-align: right;
+}
+input[type=radio] {
+    margin: 4px 7px 0;
+    width:15px;
+    height:15px;
+    }
 /* Safari Conditional CSS  */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     /* Safari and Chrome, if Chrome rule needed */
