--- a/TalentAnalyticsSite/App/reviewer-form/views/reviewerForm.html
+++ b/TalentAnalyticsSite/App/reviewer-form/views/reviewerForm.html
@@ -5,7 +5,7 @@
 				<h4>Personal Details <span class="required-astriek">*</span></h4>	
 				<section class="row">
 					<section class="col-md-3" class="form-group">
-						<!-- Name *:  --><input name="personalName" placeholder="Name" class="form-control text-input-min-size" required ng-model="details.personalName"  ></input>
+						<!-- Name *:  --><input name="personalName" placeholder="Name" class="form-control text-input-min-size" required ng-model="details.personalName"  />
 						<p ng-show="detailsForm.personalName.$invalid && !detailsForm.personalName.$pristine" class="required-message">Enter Personal name</p>
 					</section>
 					<section class="col-md-3" class="form-group">
