--- a/TalentAnalyticsSite/App/styles/styles.css
+++ b/TalentAnalyticsSite/App/styles/styles.css
@@ -22,3 +22,26 @@
 .delete-span{
   cursor: pointer;
 }
+
+input.date-picker {
+  width: 100%;
+  height: 30px !important;
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  background: url(/extrovert4/images/calenderIcon.png) no-repeat;
+  background-size: 15px;
+  background-position: 150px;
+  font-family: OpenSansReg;
+  font-size: 14px;
+  color: #8C8C8C;
+  line-height: 19px;
+}
+input.date-picker:focus {
+  background: url(/extrovert4/images/calenderIconBlue.png) no-repeat;
+  background-size: 15px;
+  background-position: 150px;
+  border: 1px solid #0088cc;
+  outline: none;
+}
+
